<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pacha</string>

    <string name="exercise_label">Exercises</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_subtitle">Exercise Time</string>
    <string name="exercise_label_type">Type: %s</string>
    <string name="exercise_label_timer">Timer: %d</string>
    <string name="exercise_label_repetition">%dx</string>
    <string name="exercise_label_weight">%d kg</string>

    <string name="exercise_add_label_repetition">Repetition</string>
    <string name="exercise_add_label_weight">Weight</string>

    <string name="exercise_timer">1:15</string>

    <string name="exercise_repetition">12x</string>

    <string name="title">Pre Jumping Jacks</string>
    <string name="subtitle" tools:ignore="TypographyFractions">1/4</string>
    <string name="timer">1:10</string>
    <string name="go">go</string>
    <string name="workout_title">Workout Title</string>
    <string name="workout_description">Workout Description</string>

    <string name="title_cdata"><![CDATA[<h3>HERE IS YOUR EXERCISE DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="repetition"><![CDATA[<b>Repetition:</b>]]></string>
    <string name="time_exercised"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>
    <string name="menu_save">Save</string>
    <string name="exercises_label">Exercises</string>

    <string name="close">Close</string>

    <string name="empty_name_not_saved">Exercise not saved because name is empty.</string>

    <string-array name="types">
        <item>Rest</item>
        <item>Work</item>
    </string-array>
</resources>
