<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.maurozegarra.app.impetusx.exerciseadd.ExerciseAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".exerciseadd.ExerciseAddFragment">

        <EditText
            android:id="@+id/edit_exercise_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/exercise_name"
            android:hint="@string/exercise_name"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/exercise_type_array"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_exercise_name" />

        <TextView
            android:id="@+id/text_repetition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/exercise_label_repetition"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/picker_repetition"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type" />

        <NumberPicker
            android:id="@+id/picker_repetition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/picker_weight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_repetition" />

        <TextView
            android:id="@+id/text_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/exercise_label_weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/picker_weight"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type" />

        <NumberPicker
            android:id="@+id/picker_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/picker_repetition"
            app:layout_constraintTop_toBottomOf="@+id/text_weight" />

        <EditText
            android:id="@+id/edit_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/exercise_timer"
            android:hint="@string/exercise_timer"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picker_weight" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
